--- a/donate/btc.html
+++ b/donate/btc.html
@@ -5,18 +5,18 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="../_app/immutable/assets/_layout.f71ba391.css" rel="stylesheet">
-		<link href="../_app/immutable/assets/_page.2b780c40.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.d2df5091.js">
+		<link href="../_app/immutable/assets/_layout.941d0f95.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/_page.28c1e6e5.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.9bb3e233.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.42287a0b.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.d02ff274.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.c8d07409.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.e1896055.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.362f862a.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.9871b1ae.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.0eb1c8fa.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.532fb31b.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.ef034390.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.3dfb6ac4.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.b0cc5146.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.3c8cf867.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.835184a0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_page.73e3b557.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1d6e596f.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/btc"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/btc"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END -->
@@ -25,21 +25,21 @@
 		<div>
 
 
-<div class="grid-container svelte-1k3hwar"><div class="main-content svelte-1k3hwar">
+<div class="grid-container svelte-1v7zjnh"><div class="main-content svelte-1v7zjnh">
 <h1>Bitcoin</h1>
-<p class="svelte-9b93q5"><span class="svelte-9b93q5">3HKUD9wjmHiWp11Z2K6kGZdnq5TAHe6rH3</span>
-	<button aria-label="Скопировать" class="svelte-1qoau0g"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" aria-hidden="true" class="bx--snippet__icon" viewBox="0 0 32 32"><path d="M28 10v18H10V10h18m0-2H10a2 2 0 0 0-2 2v18a2 2 0 0 0 2 2h18a2 2 0 0 0 2-2V10a2 2 0 0 0-2-2Z"/><path d="M4 18H2V4a2 2 0 0 1 2-2h14v2H4Z"/></svg><!-- HTML_TAG_END -->
+<p class="svelte-28x2r3"><span class="svelte-28x2r3">3HKUD9wjmHiWp11Z2K6kGZdnq5TAHe6rH3</span>
+	<button aria-label="Скопировать" class="svelte-kzqxxw"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" aria-hidden="true" class="bx--snippet__icon" viewBox="0 0 32 32"><path d="M28 10v18H10V10h18m0-2H10a2 2 0 0 0-2 2v18a2 2 0 0 0 2 2h18a2 2 0 0 0 2-2V10a2 2 0 0 0-2-2Z"/><path d="M4 18H2V4a2 2 0 0 1 2-2h14v2H4Z"/></svg><!-- HTML_TAG_END -->
 	
 </button></p>
 
-<p class="svelte-9b93q5"></p></div>
-	<div class="footer svelte-1k3hwar"><nav><a href="http://sveltekit-prerender/" class="svelte-13mclog">Вернуться на главную</a></nav>
-		<ul class="svelte-kmqdty"><li><a href="https://t.me/spblpr" target="_blank" aria-label="Telegram ЛПР Петербург" class="svelte-kmqdty"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#1d98dc" d="M0 0h42v42H0z"/><path fill="#d8e4ee" d="M18.236 26.982c-.494 0-.41-.187-.581-.658L16.2 21.535l11.2-6.644"/><path fill="#c1d7e5" d="M18.236 27.057c.382 0 .55-.174.764-.382l2.036-1.98-2.54-1.531"/><path fill="#fff" d="m18.506 23.193 6.155 4.547c.703.388 1.21.187 1.384-.652l2.506-11.806c.256-1.028-.392-1.495-1.064-1.19l-14.712 5.673c-1.004.403-.998.963-.183 1.212l3.776 1.179 8.74-5.514c.413-.25.791-.116.48.16"/></g></svg><!-- HTML_TAG_END --></a></li>
-	<li><a href="https://twitter.com/spblpr" target="_blank" aria-label="Twitter ЛПР Петербург" class="svelte-kmqdty"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#69ace0" d="M0 0h42v42H0z"/><path fill="#fff" d="M27.667 16.333 29.333 16s-1.4 1.567-1.666 1.667c-.034.766 0 1 0 1-3.2 13.733-15 7.666-15 7.666 4.3.1 4.666-1.666 4.666-1.666-2.5-.367-3-2-3-2 .867.4 1.334-.334 1.334-.334-2.7-.7-2.334-3.333-2.334-3.333.467.4 1.2.567 1.634.633-.3-.366-2.834-3.4-1.3-4.966 0 0 1.866 3.333 6.766 3.633l.334-.067C20.7 18 20.7 17.767 20.7 17.5a3.5 3.5 0 0 1 3.5-3.5c2.333 0 2.833 1.333 2.833 1.333l1.667-1c-.033 0-.2 1.667-1.033 2z"/></g></svg><!-- HTML_TAG_END --></a></li>
-	<li><a href="https://vk.com/spblpr" target="_blank" aria-label="VK ЛПР Петербург" class="svelte-kmqdty"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#507299" d="M0 0h42v42H0z"/><path fill="#fff" d="M22.426 25.471a.646.646 0 0 0 .476-.204.66 3.663 0 0 0 .136-.408s0-1.342.612-1.546c.611-.204 1.427 1.275 2.243 1.818a1.87 1.87 0 0 0 1.156.34h2.244s1.155 0 .611-1.002a8.346 8.346 0 0 0-1.7-1.887c-1.427-1.275-1.223-1.07.477-3.298 1.02-1.342 1.427-2.158 1.36-2.566-.069-.408-.884-.272-.884-.272h-2.499a.918.918 0 0 0-.34 0 .527.527 0 0 0-.204.272c-.262.677-.58 1.33-.952 1.955-1.155 1.886-1.563 1.954-1.7 1.886-.135-.068-.34-1.07-.34-1.7 0-1.818.273-2.566-.543-2.77a3.926 3.926 0 0 0-1.377-.05 5.949 5.949 0 0 0-2.108.203c-.272.136-.544.476-.408.476.285.007.555.13.748.34.185.35.279.742.272 1.139 0 0 .136 2.158-.34 2.43-.476.272-.816-.204-1.835-1.886a10.997 10.997 0 0 1-.884-1.82.527.527 0 0 0-.187-.271.68.68 0 0 0-.408-.136h-2.448a.85.85 0 0 0-.544.136c-.136.136 0 .408 0 .408a27.195 27.195 0 0 0 4.08 6.544 5.864 5.864 0 0 0 4.215 1.886l1.07-.017z"/></g></svg><!-- HTML_TAG_END --></a></li>
-	<li><a href="https://instagram.com/spblpr" target="_blank" aria-label="Instagram ЛПР Петербург" class="svelte-kmqdty"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><defs><radialGradient id="b" cx="22.169%" cy="100%" r="75.942%" fx="22.169%" fy="100%"><stop offset="0%" stop-color="#ffc85a"/><stop offset="100%" stop-color="#f24a75" stop-opacity=".104"/></radialGradient><linearGradient id="a" x1="50%" x2="50%" y1="0%" y2="96.71%"><stop offset="0%" stop-color="#5974f6"/><stop offset="100%" stop-color="#f24a75"/></linearGradient></defs><g fill="none"><path fill="url(#a)" d="M0 0h42v42H0z"/><path fill="url(#b)" d="M0 0h42v42H0z"/><path fill="#fff" d="M12 17.199A5.199 5.199 0 0 1 17.199 12H24.8a5.199 5.199 0 0 1 5.2 5.199V24.8a5.199 5.199 0 0 1-5.199 5.2H17.2a5.199 5.199 0 0 1-5.2-5.199V17.2zm1.63.155v7.292a3.725 3.725 0 0 0 3.724 3.725h7.292a3.725 3.725 0 0 0 3.725-3.725v-7.292a3.725 3.725 0 0 0-3.725-3.725h-7.292a3.725 3.725 0 0 0-3.725 3.725zm7.342 8.355a4.737 4.737 0 1 1 0-9.474 4.737 4.737 0 0 1 0 9.474zm0-1.686a3.05 3.05 0 1 0 0-6.102 3.05 3.05 0 0 0 0 6.102z"/><circle cx="25.263" cy="15.789" r="1" fill="#fff"/></g></svg><!-- HTML_TAG_END --></a></li>
-	<li><a href="https://facebook.com/spblpr" target="_blank" aria-label="Facebook ЛПР Петербург" class="svelte-kmqdty"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#39579a" d="M0 0h42v42H0z"/><path fill="#fff" d="M22 17.34v.663h3l-.23 3H22V29h-3.003v-7.997H17v-3h2l-.003-1.666s.34-3.668 3.003-3.937h3V15h-1.337c-.2 0-1.663-.29-1.663 2.34z"/></g></svg><!-- HTML_TAG_END --></a></li>
-	<li><a href="https://youtube.com/spblpr" target="_blank" aria-label="YouTube ЛПР Петербург" class="svelte-kmqdty"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#f33" d="M0 0h42v42H0z"/><path fill="#fff" d="m17 27.489 10.645-6.148L17 15.194z"/></g></svg><!-- HTML_TAG_END --></a></li>
+<p class="svelte-28x2r3"></p></div>
+	<div class="footer svelte-1v7zjnh"><nav><a href="http://sveltekit-prerender/" class="svelte-13mclog">Вернуться на главную</a></nav>
+		<ul class="svelte-15n3bs8"><li><a href="https://t.me/spblpr" target="_blank" aria-label="Telegram ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#1d98dc" d="M0 0h42v42H0z"/><path fill="#d8e4ee" d="M18.236 26.982c-.494 0-.41-.187-.581-.658L16.2 21.535l11.2-6.644"/><path fill="#c1d7e5" d="M18.236 27.057c.382 0 .55-.174.764-.382l2.036-1.98-2.54-1.531"/><path fill="#fff" d="m18.506 23.193 6.155 4.547c.703.388 1.21.187 1.384-.652l2.506-11.806c.256-1.028-.392-1.495-1.064-1.19l-14.712 5.673c-1.004.403-.998.963-.183 1.212l3.776 1.179 8.74-5.514c.413-.25.791-.116.48.16"/></g></svg><!-- HTML_TAG_END --></a></li>
+	<li><a href="https://twitter.com/spblpr" target="_blank" aria-label="Twitter ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#69ace0" d="M0 0h42v42H0z"/><path fill="#fff" d="M27.667 16.333 29.333 16s-1.4 1.567-1.666 1.667c-.034.766 0 1 0 1-3.2 13.733-15 7.666-15 7.666 4.3.1 4.666-1.666 4.666-1.666-2.5-.367-3-2-3-2 .867.4 1.334-.334 1.334-.334-2.7-.7-2.334-3.333-2.334-3.333.467.4 1.2.567 1.634.633-.3-.366-2.834-3.4-1.3-4.966 0 0 1.866 3.333 6.766 3.633l.334-.067C20.7 18 20.7 17.767 20.7 17.5a3.5 3.5 0 0 1 3.5-3.5c2.333 0 2.833 1.333 2.833 1.333l1.667-1c-.033 0-.2 1.667-1.033 2z"/></g></svg><!-- HTML_TAG_END --></a></li>
+	<li><a href="https://vk.com/spblpr" target="_blank" aria-label="VK ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#507299" d="M0 0h42v42H0z"/><path fill="#fff" d="M22.426 25.471a.646.646 0 0 0 .476-.204.66 3.663 0 0 0 .136-.408s0-1.342.612-1.546c.611-.204 1.427 1.275 2.243 1.818a1.87 1.87 0 0 0 1.156.34h2.244s1.155 0 .611-1.002a8.346 8.346 0 0 0-1.7-1.887c-1.427-1.275-1.223-1.07.477-3.298 1.02-1.342 1.427-2.158 1.36-2.566-.069-.408-.884-.272-.884-.272h-2.499a.918.918 0 0 0-.34 0 .527.527 0 0 0-.204.272c-.262.677-.58 1.33-.952 1.955-1.155 1.886-1.563 1.954-1.7 1.886-.135-.068-.34-1.07-.34-1.7 0-1.818.273-2.566-.543-2.77a3.926 3.926 0 0 0-1.377-.05 5.949 5.949 0 0 0-2.108.203c-.272.136-.544.476-.408.476.285.007.555.13.748.34.185.35.279.742.272 1.139 0 0 .136 2.158-.34 2.43-.476.272-.816-.204-1.835-1.886a10.997 10.997 0 0 1-.884-1.82.527.527 0 0 0-.187-.271.68.68 0 0 0-.408-.136h-2.448a.85.85 0 0 0-.544.136c-.136.136 0 .408 0 .408a27.195 27.195 0 0 0 4.08 6.544 5.864 5.864 0 0 0 4.215 1.886l1.07-.017z"/></g></svg><!-- HTML_TAG_END --></a></li>
+	<li><a href="https://instagram.com/spblpr" target="_blank" aria-label="Instagram ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><defs><radialGradient id="b" cx="22.169%" cy="100%" r="75.942%" fx="22.169%" fy="100%"><stop offset="0%" stop-color="#ffc85a"/><stop offset="100%" stop-color="#f24a75" stop-opacity=".104"/></radialGradient><linearGradient id="a" x1="50%" x2="50%" y1="0%" y2="96.71%"><stop offset="0%" stop-color="#5974f6"/><stop offset="100%" stop-color="#f24a75"/></linearGradient></defs><g fill="none"><path fill="url(#a)" d="M0 0h42v42H0z"/><path fill="url(#b)" d="M0 0h42v42H0z"/><path fill="#fff" d="M12 17.199A5.199 5.199 0 0 1 17.199 12H24.8a5.199 5.199 0 0 1 5.2 5.199V24.8a5.199 5.199 0 0 1-5.199 5.2H17.2a5.199 5.199 0 0 1-5.2-5.199V17.2zm1.63.155v7.292a3.725 3.725 0 0 0 3.724 3.725h7.292a3.725 3.725 0 0 0 3.725-3.725v-7.292a3.725 3.725 0 0 0-3.725-3.725h-7.292a3.725 3.725 0 0 0-3.725 3.725zm7.342 8.355a4.737 4.737 0 1 1 0-9.474 4.737 4.737 0 0 1 0 9.474zm0-1.686a3.05 3.05 0 1 0 0-6.102 3.05 3.05 0 0 0 0 6.102z"/><circle cx="25.263" cy="15.789" r="1" fill="#fff"/></g></svg><!-- HTML_TAG_END --></a></li>
+	<li><a href="https://facebook.com/spblpr" target="_blank" aria-label="Facebook ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#39579a" d="M0 0h42v42H0z"/><path fill="#fff" d="M22 17.34v.663h3l-.23 3H22V29h-3.003v-7.997H17v-3h2l-.003-1.666s.34-3.668 3.003-3.937h3V15h-1.337c-.2 0-1.663-.29-1.663 2.34z"/></g></svg><!-- HTML_TAG_END --></a></li>
+	<li><a href="https://youtube.com/spblpr" target="_blank" aria-label="YouTube ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#f33" d="M0 0h42v42H0z"/><path fill="#fff" d="m17 27.489 10.645-6.148L17 15.194z"/></g></svg><!-- HTML_TAG_END --></a></li>
 </ul></div>
 </div>
 
@@ -47,7 +47,7 @@
 			
 			<script>
 				{
-					__sveltekit_1slz8rj = {
+					__sveltekit_ps4omv = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -56,10 +56,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.d2df5091.js"),
-						import("../_app/immutable/entry/app.c8d07409.js")
+						import("../_app/immutable/entry/start.9bb3e233.js"),
+						import("../_app/immutable/entry/app.362f862a.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1slz8rj.element, {
+						kit.start(app, __sveltekit_ps4omv.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
