--- a/donate/tinkoff.html
+++ b/donate/tinkoff.html
@@ -7,18 +7,18 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.941d0f95.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.28c1e6e5.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.9bb3e233.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.2cc46256.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.d02ff274.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.feb421d5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.362f862a.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.9871b1ae.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.9f5c11a2.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.057f577c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.3dfb6ac4.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.b0cc5146.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.b6cf6c39.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.1c972f40.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.3c8cf867.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.835184a0.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page.73e3b557.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.ca2e8e7b.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page.4e25ef50.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1d6e596f.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/tinkoff"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/tinkoff"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END -->
 	</head>
 	<body>
@@ -47,7 +47,7 @@
 			
 			<script>
 				{
-					__sveltekit_ps4omv = {
+					__sveltekit_do4hek = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -56,10 +56,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.9bb3e233.js"),
-						import("../_app/immutable/entry/app.362f862a.js")
+						import("../_app/immutable/entry/start.2cc46256.js"),
+						import("../_app/immutable/entry/app.9f5c11a2.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_ps4omv.element, {
+						kit.start(app, __sveltekit_do4hek.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
