--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 		<link href="./_app/immutable/assets/_layout.941d0f95.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.9bb3e233.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.2cc46256.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.d02ff274.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.feb421d5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.362f862a.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.9871b1ae.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.9f5c11a2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.057f577c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.3dfb6ac4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.b6cf6c39.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.3b2d4b94.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/link.19b25350.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-4gvw5l_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><!-- HEAD_svelte-4gvw5l_END -->
 	</head>
@@ -92,7 +92,7 @@
 			
 			<script>
 				{
-					__sveltekit_ps4omv = {
+					__sveltekit_do4hek = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -101,10 +101,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.9bb3e233.js"),
-						import("./_app/immutable/entry/app.362f862a.js")
+						import("./_app/immutable/entry/start.2cc46256.js"),
+						import("./_app/immutable/entry/app.9f5c11a2.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_ps4omv.element, {
+						kit.start(app, __sveltekit_do4hek.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
